--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "env": {
-    "jquery": true
+    "jquery": true,
+    "es6": true
+  },
+  "ecmaFeatures": {
+    "modules": true
   },
   "rules": {
     "quotes": [2, "double"]
